--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         background-position: center;
           background-repeat:  no-repeat ;
         background-attachment: fixed;
+        height: 100vh;
+        font-family: "Georgia", serif;
       } 
       
      .big-red {
