--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
       
   		<body> 
     	<h1> NON ART REALITY </h1>
-  
-    	</body>
+  		<h1> NON ART REALITY </h1>
+      <h1> NON ART REALITY </h1>
+      <h1> NON ART REALITY </h1>
+    	
+  </body>
  	
 </html>
