--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       font-family: "Arial", sans serif;
       margin: 0;
  		 cursor: url(images/cursors/rainbow/0.gif), auto;
+    
     }       
 
     h1 {
@@ -48,7 +49,9 @@
 
 <body> 
   <h1 class="conveyor-belt"><span class="text">NON ART REALITY NON ART REALITY NON ART REALITY NON ART REALITY NON ART REALITY </span></h1>
-</body>
+	<img src="https://media.giphy.com/media/Ep3TjMetVOQZG6MCre/giphy.gif">
+ 	<img src="https://media.giphy.com/media/gJ2TzwqdRoKoZ0KWhW/giphy.gif"> https://media.giphy.com/media/gJ2TzwqdRoKoZ0KWhW/giphy.gif
+  </body>
 
 </html>
 
