--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     .text {
       display: inline-block;
       padding-right: 100%; /* This value determines the speed of the conveyor belt animation */
-      animation: conveyor 8s linear infinite; /* Adjust the duration for the desired speed */
+      animation: conveyor 15s linear infinite; /* Adjust the duration for the desired speed */
     }
 
     @keyframes conveyor {
@@ -48,9 +48,12 @@
 </head>
 
 <body> 
-  <h1 class="conveyor-belt"><span class="text">NON ART REALITY NON ART REALITY NON ART REALITY NON ART REALITY NON ART REALITY </span></h1>
+  <h1 class="conveyor-belt"><span class="text">WELCOME TO MY NON ART REALITY NON ART REALITY NON ART REALITY NON ART REALITY NON ART REALITY </span></h1>
 	<img src="https://media.giphy.com/media/Ep3TjMetVOQZG6MCre/giphy.gif">
- 	<img src="https://media.giphy.com/media/gJ2TzwqdRoKoZ0KWhW/giphy.gif"> https://media.giphy.com/media/gJ2TzwqdRoKoZ0KWhW/giphy.gif
+ 	<img src="https://media.giphy.com/media/gJ2TzwqdRoKoZ0KWhW/giphy.gif"> 
+ 	<img src="https://media.giphy.com/media/572Ca3vQAvbcYJW3kL/giphy.gif">
+  <img src="https://media.giphy.com/media/9SIpqC8foCbt8YnkTS/giphy.gif">
+  
   </body>
 
 </html>
