--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
       height: 100vh;
       font-family: "Arial", sans serif;
       margin: 0;
-     	cursor: url("https://media.giphy.com/media/3oKIPn5EmNia9HSaTC/giphy.gif"), auto;
     }       
 
     h1 {
@@ -53,7 +52,8 @@
  	<img src="https://media.giphy.com/media/572Ca3vQAvbcYJW3kL/giphy.gif">
   <img src="https://media.giphy.com/media/9SIpqC8foCbt8YnkTS/giphy.gif">
   <img src="https://media.giphy.com/media/sUGRtvggBOFhr9YkIr/giphy.gif">
-  
+  <img src="https://media.giphy.com/media/iehsZQR0fyJxUmR00X/giphy.gif">
+                                                                      
   </body>
 
 </html>
